<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ocr2</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter a message</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_send">Send</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="text_view">Text View</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="photo">Take photo</string>
    <string name="test">Test picture recognition</string>
	<string name="load_to_test">Choose from gallery to test</string>
</resources>
